kustomize-guestbook/bases/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift-kustomize
spec:
  host: kustomize-example.apps.non-prod.hcaocp.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-openshift-kustomize
